--- a/food-waste-client/src/containers/About.css
+++ b/food-waste-client/src/containers/About.css
@@ -1,16 +1,17 @@
 #about-text {
   /* width: 900px; */
   max-width: 1400px;
-  
 }
 
 .about {
+  text-align: center;
   box-sizing: border-box;
   padding: 25px;
   background-color: #87aa2f;
   color: white;
-  display: flex;
-  flex-flow: row wrap;
+  margin: 0 auto;
+  /* display: flex;
+  flex-flow: row wrap; */
 }
 
 .about h2 {
@@ -20,7 +21,6 @@
 
 .about Button {
   height: 35px;
-  align-self: center;
   width: fit-content;
   margin: 0 auto;
 }
