--- a/food-waste-client/src/containers/SplashBanner.css
+++ b/food-waste-client/src/containers/SplashBanner.css
@@ -11,6 +11,10 @@
     margin-top: 200px;
 }
 
+.lander Button {
+    margin: 5px;
+}
+
 @media screen and (min-width: 1645px) {
     .lander {
       height: 1000px;
