--- a/food-waste-client/src/containers/Recipes.css
+++ b/food-waste-client/src/containers/Recipes.css
@@ -8,13 +8,15 @@
   text-align: center;
   width: 350px;
   margin: 8px;
-  border: 2px solid navy;
-  background-color: white;
+  border: 2px solid #000080;
+  background-color: #ffffff90;
   padding: 15px;
 }
 
 .recipes {
-  background-color: navy;
+  background: #4b6cb7; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #4b6cb7, #182848); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #4b6cb7, #182848); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   padding: 25px 10px;
 }
 
@@ -22,3 +24,4 @@
   text-align: center;
   color: #87aa2f;
 }
+
